<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.ProfileActivity">


        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            style="@style/Profile.View"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_last_name" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/aspectRatioImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/image_header_description"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1.78"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/forest_mountain" />

        <ImageButton
            android:id="@+id/btn_switch_theme"
            android:layout_width="@dimen/btn_round_size"
            android:layout_height="@dimen/btn_round_size"
            android:layout_marginEnd="32dp"
            android:background="@drawable/btn_round_bg"
            android:src="@drawable/ic_baseline_brightness_7_24"
            app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
            app:layout_constraintEnd_toStartOf="@+id/iv_avatar"
            app:layout_constraintTop_toTopOf="@+id/iv_avatar" />

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/avatar_round_size"
            android:layout_height="@dimen/avatar_round_size"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_round_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="@+id/aspectRatioImageView"
            app:layout_constraintTop_toTopOf="@+id/aspectRatioImageView"
            app:srcCompat="@drawable/ic_baseline_account_circle_24" />

        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="@dimen/btn_round_size"
            android:layout_height="@dimen/btn_round_size"
            android:layout_marginStart="32dp"
            android:background="@drawable/btn_round_bg"
            android:src="@drawable/ic_baseline_edit_black24"
            app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
            app:layout_constraintStart_toEndOf="@+id/iv_avatar"
            app:layout_constraintTop_toTopOf="@+id/iv_avatar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_nick_name"
            style="@style/nick_name_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/iv_avatar"
            app:layout_constraintStart_toStartOf="@+id/iv_avatar"
            app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_rank"
            style="@style/profile_text_sttyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/user"
            app:layout_constraintBottom_toBottomOf="@+id/aspectRatioImageView"
            app:layout_constraintEnd_toEndOf="@+id/tv_nick_name"
            app:layout_constraintStart_toStartOf="@+id/tv_nick_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_nick_name" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aspectRatioImageView"
            android:background="?attr/colorPrimary"
             />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="80dp"
            style="@style/Profile.View"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aspectRatioImageView" />

        <TextView
            android:id="@+id/textView"
            style="@style/profile_text_sttyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/aspectRatioImageView" />

        <TextView
            android:id="@+id/tv_rating"
            style="@style/profile_text_sttyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            style="@style/profile_text_sttyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/aspectRatioImageView" />

        <TextView
            android:id="@+id/tv_respect"
            style="@style/profile_text_sttyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/ti_first_name"
            app:layout_constraintEnd_toStartOf="@+id/ti_first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ti_first_name"
            app:srcCompat="@drawable/outline_account_circle_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            style="@style/Profile.EditText"
            app:counterMaxLength="30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            style="@style/Profile.EditText"
            app:counterMaxLength="30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ti_first_name"
            app:layout_constraintTop_toBottomOf="@+id/ti_first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_second_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            style="@style/Profile.View"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_last_name" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/wr_about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            app:srcCompat="@drawable/outline_description_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            style="@style/Profile.EditText"
            app:counterEnabled="true"
            app:counterMaxLength="128"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/view2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Кто я?" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/wr_repository"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4"
            app:srcCompat="@drawable/outline_insert_link_24" />

        <View
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            style="@style/Profile.View"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wr_about" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_repository"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/Profile.EditText"
            app:layout_constraintEnd_toStartOf="@+id/ic_eye"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/view4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_repository"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ссылка на репозиторий" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ic_eye"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/wr_repository"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/wr_repository"
            app:layout_constraintTop_toTopOf="@+id/wr_repository"
            app:srcCompat="@drawable/outline_visibility_24" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>